// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MethodDeclaration duplicate params 1`] = `
"// fakeid
dividerImageForLeftSegmentState_rightSegmentState(state: UIControlState, state1: UIControlState):UIImage;"
`;

exports[`MethodDeclaration multiple params 1`] = `
"// fakeid
addSubview_positioned_relativeTo(view: NSView, place: NSWindowOrderingMode, otherView: NSView):void;"
`;

exports[`MethodDeclaration simple method 1`] = `
"// fakeid
initWithFrame(frameRect: NSRect):NSView;"
`;

exports[`MethodDeclaration unsigned params 1`] = `
"// fakeid
initWithBitmapDataPlanes_pixelsWide_pixelsHigh_bitsPerSample_samplesPerPixel_hasAlpha_isPlanar_colorSpaceName_bitmapFormat_bytesPerRow_bitsPerPixel(planes: string, width: NSInteger, height: NSInteger, bps: NSInteger, spp: NSInteger, alpha: BOOL, isPlanar: BOOL, colorSpaceName: NSColorSpaceName, bitmapFormat: NSBitmapFormat, rBytes: NSInteger, pBits: NSInteger):NSView;"
`;

exports[`MethodDeclaration with nullable 1`] = `
"// fakeid
typeOfFile_error(absoluteFilePath: string | cocoascript.NSString, outError: NSError):NSString;"
`;
